// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConditionEditor > renders empty 1`] = `
NodeList [
  <div>
    <div
      class="u-py-2x u-font-bold u-text-primary u-tracking-wide"
    >
      <svg
        class="u-inline"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.828 9.172a4 4 0 1 0 0 5.656a10 10 0 0 0 2.172 -2.828a10 10 0 0 1 2.172 -2.828a4 4 0 1 1 0 5.656a10 10 0 0 1 -2.172 -2.828a10 10 0 0 0 -2.172 -2.828"
        />
      </svg>
      This variation renders unconditionally!
    </div>
    <button
      class="u-btn u-btn-outline u-btn-secondary u-uppercase"
      type="button"
    >
      Add new condition
    </button>
  </div>,
]
`;

exports[`ConditionEditor > renders with conditions 1`] = `
NodeList [
  <div>
    <div
      class="u-py-2x u-font-bold u-text-primary u-tracking-wide"
    >
      <svg
        class="u-inline"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 19a2 2 0 0 0 2 2c2 0 2 -4 3 -9s1 -9 3 -9a2 2 0 0 1 2 2"
        />
        <path
          d="M5 12h6"
        />
        <path
          d="M15 12l6 6"
        />
        <path
          d="M15 18l6 -6"
        />
      </svg>
      This variation renders under following conditions:
    </div>
    <div>
      <div
        class="u-p-2x u-border u-border-solid u-border-info u-rounded-lg u-mb-3xs"
      >
        <div>
          <div
            class="u-flex u-gap-4x u-mb-1x last:u-mb-0"
          >
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Variable"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c2.5 5 2.5 10 0 16m-10 -11h1c1 0 1 1 2.016 3.527c.984 2.473 .984 3.473 1.984 3.473h1"
                />
                <path
                  d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter variable name from payload"
                type="text"
                value="a1"
              />
            </label>
            <select
              aria-label="operator"
              class="u-select u-select-bordered"
            >
              <option>
                =
              </option>
              <option>
                &gt;
              </option>
              <option>
                &gt;=
              </option>
              <option>
                &lt;
              </option>
              <option>
                &lt;=
              </option>
            </select>
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Value"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 9l3 3l-3 3"
                />
                <path
                  d="M3 3m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter required value"
                type="text"
                value="on"
              />
            </label>
            <button
              aria-label="delete-line"
              type="button"
            >
              <svg
                class="tabler-icon tabler-icon-trash"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 7l16 0"
                />
                <path
                  d="M10 11l0 6"
                />
                <path
                  d="M14 11l0 6"
                />
                <path
                  d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                />
                <path
                  d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                />
              </svg>
            </button>
          </div>
          <div
            class="u-flex u-gap-4x u-mb-1x last:u-mb-0"
          >
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Variable"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c2.5 5 2.5 10 0 16m-10 -11h1c1 0 1 1 2.016 3.527c.984 2.473 .984 3.473 1.984 3.473h1"
                />
                <path
                  d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter variable name from payload"
                type="text"
                value="a2"
              />
            </label>
            <select
              aria-label="operator"
              class="u-select u-select-bordered"
            >
              <option>
                =
              </option>
              <option>
                &gt;
              </option>
              <option>
                &gt;=
              </option>
              <option>
                &lt;
              </option>
              <option>
                &lt;=
              </option>
            </select>
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Value"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 9l3 3l-3 3"
                />
                <path
                  d="M3 3m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter required value"
                type="text"
                value="off"
              />
            </label>
            <button
              aria-label="delete-line"
              type="button"
            >
              <svg
                class="tabler-icon tabler-icon-trash"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 7l16 0"
                />
                <path
                  d="M10 11l0 6"
                />
                <path
                  d="M14 11l0 6"
                />
                <path
                  d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                />
                <path
                  d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                />
              </svg>
            </button>
          </div>
          <div
            class="u-flex u-gap-4x u-mb-1x last:u-mb-0"
          >
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Variable"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c2.5 5 2.5 10 0 16m-10 -11h1c1 0 1 1 2.016 3.527c.984 2.473 .984 3.473 1.984 3.473h1"
                />
                <path
                  d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter variable name from payload"
                type="text"
                value="a3"
              />
            </label>
            <select
              aria-label="operator"
              class="u-select u-select-bordered"
            >
              <option>
                =
              </option>
              <option>
                &gt;
              </option>
              <option>
                &gt;=
              </option>
              <option>
                &lt;
              </option>
              <option>
                &lt;=
              </option>
            </select>
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Value"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 9l3 3l-3 3"
                />
                <path
                  d="M3 3m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter required value"
                type="text"
                value="3"
              />
            </label>
            <button
              aria-label="delete-line"
              type="button"
            >
              <svg
                class="tabler-icon tabler-icon-trash"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 7l16 0"
                />
                <path
                  d="M10 11l0 6"
                />
                <path
                  d="M14 11l0 6"
                />
                <path
                  d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                />
                <path
                  d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                />
              </svg>
            </button>
          </div>
          <button
            aria-label="add and condition"
            class="u-btm-sm u-btn-link u-mt-2xs"
            type="button"
          >
            <svg
              class="u-inline u-mr-1xs"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c1.38 2.76 2 5.52 1.855 8.448m-11.855 -3.448h1c1 0 1 1 2.016 3.527c.785 1.972 .944 3.008 1.483 3.346"
              />
              <path
                d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
              />
              <path
                d="M16 19h6"
              />
              <path
                d="M19 16v6"
              />
            </svg>
             Add AND condition
          </button>
        </div>
      </div>
      <div
        class="u-p-2x u-border u-border-solid u-border-info u-rounded-lg u-mb-3xs"
      >
        <div>
          <div
            class="u-flex u-gap-4x u-mb-1x last:u-mb-0"
          >
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Variable"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c2.5 5 2.5 10 0 16m-10 -11h1c1 0 1 1 2.016 3.527c.984 2.473 .984 3.473 1.984 3.473h1"
                />
                <path
                  d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter variable name from payload"
                type="text"
                value="b1"
              />
            </label>
            <select
              aria-label="operator"
              class="u-select u-select-bordered"
            >
              <option>
                =
              </option>
              <option>
                &gt;
              </option>
              <option>
                &gt;=
              </option>
              <option>
                &lt;
              </option>
              <option>
                &lt;=
              </option>
            </select>
            <label
              class="u-input u-input-bordered u-flex u-items-center u-gap-2 u-flex-1"
            >
              <svg
                aria-label="Value"
                class="u-mr-2x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 9l3 3l-3 3"
                />
                <path
                  d="M3 3m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
                />
              </svg>
              <input
                class="u-grow"
                placeholder="Enter required value"
                type="text"
                value="100"
              />
            </label>
            <button
              aria-label="delete-line"
              type="button"
            >
              <svg
                class="tabler-icon tabler-icon-trash"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 7l16 0"
                />
                <path
                  d="M10 11l0 6"
                />
                <path
                  d="M14 11l0 6"
                />
                <path
                  d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                />
                <path
                  d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                />
              </svg>
            </button>
          </div>
          <button
            aria-label="add and condition"
            class="u-btm-sm u-btn-link u-mt-2xs"
            type="button"
          >
            <svg
              class="u-inline u-mr-1xs"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 4c-2.5 5 -2.5 10 0 16m14 -16c1.38 2.76 2 5.52 1.855 8.448m-11.855 -3.448h1c1 0 1 1 2.016 3.527c.785 1.972 .944 3.008 1.483 3.346"
              />
              <path
                d="M8 16c1.5 0 3 -2 4 -3.5s2.5 -3.5 4 -3.5"
              />
              <path
                d="M16 19h6"
              />
              <path
                d="M19 16v6"
              />
            </svg>
             Add AND condition
          </button>
        </div>
      </div>
    </div>
    <button
      class="u-btn u-btn-outline u-btn-secondary u-uppercase"
      type="button"
    >
      Add new condition
    </button>
  </div>,
]
`;
